# amazon-affiliate-autopilot

./: .gitignore  README.md
.claude/skills/: PIPELINE.md
.claude/skills/caption-video/: SKILL.md
.claude/skills/generate-hedra-video/: SKILL.md
.claude/skills/generate-narration/: SKILL.md
.claude/skills/generate-starting-image/: SKILL.md
.claude/skills/generate-video-prompt/: SKILL.md
.claude/skills/import-music/: SKILL.md
.claude/skills/import-referral-data/: SKILL.md
.claude/skills/upload-ad/: SKILL.md
amazon-product-page-scraper/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
amazon-product-page-scraper/html-examples/: about-product-section.html  about-product-section2.html  product-info1 copy 4.html  product-info1.html
captioning/: README.md  backfill_captioned_field.py  caption_video.py  cli.py  presets.py  pyproject.toml  render.py  style_select.py  transcribe.py
dashboard/: .env.example  package-lock.json  package.json  proxy.ts
dashboard/app/: globals.css  icon.tsx  layout.tsx  page.tsx
dashboard/components/: Card.tsx  HeaderKpis.tsx  TabNav.tsx  TrafficChart.tsx
dashboard/lib/: range.ts  supabase.ts
docs/: channel-startup.md  hyperframes-inspo.md  niche.md  pinterest-privacy-policy.md  pinterest-upload.md  products.md  rules.md  upload-meta.md  upload-pinterest.md  upload-x.md  video-pipeline.md
extensions/amazon-product-page-scraper/: README.md  background.js  manifest.json  popup.html  popup.js
extensions/youtube-paid-promo-flagger/: background.js  content.js  manifest.json  popup.html  popup.js
hedra/: README.md  _common.py  pyproject.toml
hedra-vid-gen/: README.md  _common.py  generate.py  pyproject.toml
hedra-vid-gen/avatar-video/: generate.py
hedra-vid-gen/starting-image/: generate.py  list_models.py  prompt_builder.py
hedra/avatar-video/: generate.py  recover.py
hedra/starting-image/: generate.py  list_models.py
narration/: .gitignore  README.md  generate.py  list_voices.py  pyproject.toml
scripts/: apply_scripts.py  credits.py  hedra_credits.py  import_music.py  overlay_music.py  sanitize_slugs.py  script_lint.py  status.py  stitch_narration.py  upload_ad.py
uploader/: pyproject.toml  upload.py
uploader/pinterest/: .env.example  upload.py
uploader/x/: .env.example  .gitignore  pyproject.toml  upload.py  x_auth.py
uploader/youtube/: upload.py  youtube_auth.py
uploader/youtube/stats/: comments.json  fetch.py  stats.csv  stats.html
website/: next.config.ts  package-lock.json  package.json
website/app/: apple-icon.tsx  error.tsx  globals.css  layout.tsx  manifest.ts  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
website/components/: analytics-tracker.tsx  buy-button.tsx
website/lib/: products.ts  seo.ts
website/public/: favicon-download.html  favicon-samples.html  products.json
website/scripts/: generate-products.mjs  remove_product_bgs.py
(+34 files in other folders)
