[project]
name = "captioning"
version = "0.1.0"
description = "Burn styled captions onto an mp4 using WhisperX word-level timing."
authors = [
    {name = "Matt Main_PC", email = "matmigg0804@gmail.com"}
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "whisperx (>=3.8.5,<4.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "numpy (>=2.4.4,<3.0.0)"
]

[project.scripts]
caption = "cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
