[tool.poetry]
name = "hedra-vid-gen"
version = "0.1.0"
description = "Hedra Avatar talking-head video generator for Amazon affiliate products"
authors = ["Matt"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "^2.31.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
